# Gr8Base-Server

./: .env.example  .gitignore  AGENT.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  shart.sh  start.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0006_career_profile_engine.py
app/: bootstrap.py  main.py
app/adapters/ai/agents/: career_extractor_agent.py  enrichment_agent.py  jd_analyzer_agent.py  resume_parser_agent.py
app/adapters/ai/providers/: llm_provider.py  openai_embedding_provider.py  pgvector_store.py  tavily_search_provider.py
app/adapters/api/dependencies/: auth.py
app/adapters/api/middleware/: error_middleware.py
app/adapters/api/routes/: __init__.py  analytics_routes.py  application_routes.py  ats_routes.py  (+8 more)
app/adapters/events/: in_memory_event_bus.py
app/adapters/ingestion/: docx_extractor.py  ingestion_router.py  pdf_extractor.py  txt_extractor.py
app/adapters/renderer/: html_renderer.py  pdf_renderer.py
app/adapters/storage/: r2_file_storage.py
app/core/: __init__.py  exceptions.py  logging.py  utils.py
app/core/config/: __init__.py  celery_config.py  setting_config.py
app/core/security/: __init__.py  hashing.py  jwt_handler.py  validation.py
app/domain/entities/: application.py  ats.py  award.py  blog.py  career_profile.py  certification.py  education.py  experience.py  job.py  language.py  project.py  publication.py  resume.py  skill.py  technology.py  user.py
app/domain/enums/: application_stage.py  cover_letter_tone.py  employment_type.py  ingestion_status.py  outreach_type.py  resume_strategy.py  skill_category.py  workflow_status.py
app/domain/events/: career_events.py
app/domain/exceptions/: domain_exceptions.py
app/domain/port/: __init__.py  embedding_port.py  vector_store_port.py
app/infrastructure/: container.py
app/infrastructure/config/: __init__.py  normalizer.py  settings.py
app/infrastructure/database/: base.py  connection.py
app/infrastructure/di/: container.py
app/infrastructure/llm/: instructor_client.py  llm_router.py
app/infrastructure/observability/: langfuse_client.py  sentry_setup.py  structlog_setup.py
app/infrastructure/queue/: celery_app.py  celery_config.py
app/infrastructure/redis/: cache.py  client.py
app/infrastructure/security/: jwt_handler.py  password_handler.py
app/infrastructure/vector/: embedding_service.py  pgvector_client.py
app/presentation/schemas/: __init__.py  auth_schema.py  base_schema.py
docs/: AGENTS.md  API_MAP.md  DATABASE.md  IMPLEMENTATION_STATUS.md  STRUCTURE.md
tests/: conftest.py
tests/integration/: test_api.py
tests/integration/api/: test_health.py  test_job_routes.py  test_resume_routes.py
tests/unit/adapters/: test_ats_scoring_nodes.py  test_html_renderer.py  test_ingestion.py  test_jd_analyzer_agent.py  test_job_mapper.py  test_optimization_nodes.py  test_resume_mapper.py  test_resume_parser_agent.py  test_user_mapper.py
tests/unit/application/: test_use_cases.py
tests/unit/domain/: test_embedding_service.py  test_entities.py  test_exceptions.py  test_security.py
ui/: package.json
ui/src/: routeTree.gen.ts  styles.css
ui/src/lib/: api.ts  auth.tsx  seed.ts  types.ts  utils-format.ts
ui/src/routes/: __root.tsx  dashboard.tsx  index.tsx
(+176 files in other folders)
