[project]
name = "caros"
version = "0.1.0"
description = "Premium AI-powered ATS optimization and job application intelligence platform"
requires-python = ">=3.12"

dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",

    # Auth
    "fastapi-users[sqlalchemy]>=13.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pwdlib[bcrypt]>=0.2.0",

    # Queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",

    # AI / LLM
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "litellm>=1.40.0",
    "instructor>=1.4.0",
    "openai>=1.40.0",
    "anthropic>=0.34.0",

    # Observability
    "langfuse>=2.0.0",
    "structlog>=24.0.0",
    "sentry-sdk[fastapi]>=2.0.0",

    # File parsing
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "pytesseract>=0.3.10",

    # Rendering
    "jinja2>=3.1.0",
    "weasyprint>=62.0",

    # Storage
    "boto3>=1.34.0",

    # DI
    "lagom>=2.6.0",

    # Encryption
    "cryptography>=42.0.0",

    # Utils
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
omit = ["*/migrations/*", "*/tests/*"]
