[project]
name = "gr8base"
version = "0.1.0"
description = "AI-powered ATS optimization and job application intelligence platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "pwdlib>=0.2.0",
    "httpx>=0.27.0",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "langgraph>=0.2.0",
    "instructor>=1.3.0",
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "litellm>=1.40.0",
    "celery>=5.4.0",
    "redis[hiredis]>=5.0.0",
    "boto3>=1.35.0",
    "structlog>=24.1.0",
    "sentry-sdk>=2.0.0",
    "langfuse>=2.30.0",
    "jinja2>=3.1.0",
    "weasyprint>=62.0",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "lagom>=2.0.0",
    "pgvector>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "coverage>=7.5.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
